--- a/about.html
+++ b/about.html
@@ -118,16 +118,21 @@
                                             ¡HOLA! SOY PAULA LICAUSI,
                                         </h3>
                                         <p>
-                                           además de estudiar Licenciatura en Comunicación Social en la UNR, me dedico a diversas áreas en lo que conciernen al dieño gráfico y la comunicación. Mi folosofía en cuanto mi trabajo es serle fiel a los requerimientos de cada cliente sin perder de vista cuál es su objetivo y propósito. Por eso, no considero al diseño en sí mismo como algo meramente estético sino como una pieza comunicacional capaz de transmitir un mensaje y dar un impacto.</br>
+                                           además de estudiar Licenciatura en Comunicación Social en la UNR, me dedico a diversas 
+áreas en lo que conciernen al desarrollo web y la comunicación. Mi folosofía en cuanto mi trabajo es serle fiel a los requerimientos
+de cada cliente sin perder de vista cuál es su objetivo y propósito. Por eso, considero cada trabajo 
+ como una pieza comunicacional capaz de transmitir un mensaje y dar un impacto.</br>
 
                                         </p>
                                         <h4>¿Qué hago?</h4>
                                     </div>
                                     <!--===================testimonial start====================-->
-<p>■ Gestión, diseño y redacción de contenidos en redes sociales (community management)</br>
-■ Diseño de sitios web e implementación de Wordpress</br>
- ■ Diseño gráfico para empresas y particulares (identidad, folletería, cartelería, papelería, diseño para contenidos digitales, etc.) </br>
- ■ Fotografía y edición</br> </p>
+<p>■ Diseño de sitios web. Diseño UI/UX</br>
+   ■ Desarrollo sitios web / responsive design/mobile first</br>
+  ■ Desarrollo en Wordpress</br>
+  ■ Comunicación y redacción de contenidos publicitarios, institucionales y sitios web. Análisis comunicacional.</br>
+
+ </p>
 
  <a href="assets/docs/cv.pdf"><h4>Descargar CV</h4></a>
                                      
